<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/translucent_black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:layout_gravity="center" android:id="@id/txtRateMeDescription" android:paddingTop="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="12.0dip" android:text="@string/rateme_app_description" style="@style/introLabel" />
    <RatingBar android:layout_gravity="center" android:id="@id/ratingBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <LinearLayout android:orientation="vertical" android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="12.0dip">
        <Button android:id="@id/btnRateNow" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rateme_now_btn" />
        <Button android:id="@id/btnRateLater" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rateme_later_btn" />
        <Button android:id="@id/btnRateNoThanks" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rateme_no_thanks" />
    </LinearLayout>
</LinearLayout>